--- a/BASICS/index.html
+++ b/BASICS/index.html
@@ -7,7 +7,7 @@
     <link rel = "stylesheet" href = "welcomestyles.css">
 </head>
 <body>
-    <h1>WELCOME USER</h1>
+    <h1 id = "main">WELCOME USER</h1>
     <hr />
     <p>have an account already? </p>
     <a href = "login.html">login</a>
@@ -42,6 +42,16 @@
 - <b>Research Excellence:</b> Faculty produce cutting-edge insights shaping business and policy.  
 
 </pre>
+<div id = "box">
+    <p>get in touch with us !!!</p>
+</div>
+<h1 class = "heading">Heading 1</h1>
+<h2 class = "heading">Heading 2</h2>
+<h3 class = "heading">Heading 3</h3>
 
-    </body>
+<button id="button1">button 1</button>
+
+<button>button 2</button>
+
+</body>
 </html>
