--- a/CSS/02_login_project/signup.html
+++ b/CSS/02_login_project/signup.html
@@ -38,6 +38,7 @@
         button{
             background-color: rgb(213, 211, 209) ;
             border-radius :8px;
+            height : 20px;
         }
         button:hover{
             background-color: #333333;
