--- a/CSS/05_navbar/navbar.html
+++ b/CSS/05_navbar/navbar.html
@@ -38,7 +38,7 @@
         }
 
         .nav1 a:hover::after{
-
+            
         }
 
         .nav1 .login-btn{
@@ -73,6 +73,14 @@
                 <li><a href = "#">About</a></li>
                 <li><a href = "#">Products</a></li>
                 <li><button class = "login-btn">Login</button></li>
+            </ul>
+        </nav>
+    </div>
+    <div class = "nav-container">
+        <h2>Variation 2: Horizontal with dropdown</h2>
+        <nav class = "nav2">
+            <ul>
+                <li>z</li>
             </ul>
         </nav>
     </div>
