--- a/CSS/05_navbar/navbar.html
+++ b/CSS/05_navbar/navbar.html
@@ -7,7 +7,7 @@
     <style>
 
         .nav2{
-            background-color:#343a40; 
+            background-color:#173812; 
             width : 200px;
             padding : 20px;
             border-radius:10px;
@@ -30,6 +30,28 @@
             padding: 10px;
             width: 100%;
         }
+
+        .nav2 a:hover{
+            background-color : #137e0a;
+            border-radius : 20px;
+            margin-left: -5px;
+        }
+
+        .nav2 .login-btn {
+            background-color: #23541c;
+            color : white;
+            border : none;
+            border-radius: 5px;
+            padding: 10px;
+            width: 100%;
+            cursor: pointer;
+        }
+
+        .nav2 .login-btn:hover {
+            background-color: #093e10;
+            border : 1px solid white;
+        }
+         
 
         .nav1{
             background-color: #343434;
