--- a/06_comingsoon/coming-soon-landing.html
+++ b/06_comingsoon/coming-soon-landing.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chai landing page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class = "container">
+        <div class="content">
+            <img src = "cofeecup.webp" class = "logo alt=""chai logo>
+            <h1>Coming Soon</h1>
+            <p>We're working hard to bring something amazing. Stay tuned!</p>
+
+            <form id="notify-form">
+                <input type = "email" placeholder="Enter your email">
+                <button class = "notify" type = "submit">Notify me</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
