--- a/CSS/09_tailwind/src/index.html
+++ b/CSS/09_tailwind/src/index.html
@@ -6,7 +6,7 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body class = "flex justify-center items-center h-lvh ">
-  <h1 class="text-3xl font-bold underline">
+  <h1 class="text-blue-500 text-3xl font-bold underline">
     Hello world
   </h1>
 </body>
