modified:   CSS/09_tailwind/src/index.html 	modified:   CSS/09_tailwind/src/output.css

--- a/CSS/09_tailwind/src/index.html
+++ b/CSS/09_tailwind/src/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
 </head>
-<body class = "flex justify-center items-center h-lvh ">
-  <h1 class="text-blue-500 text-3xl font-bold underline">
-    Hello world
+<body class="bg-amber-200">
+  <div class ="h-0.5 w-0.5">
+    <h1 class="text-blue-500 text-3xl font-bold tracking-wider">
+    Aaryan
   </h1>
+  </div>
+  
 </body>
 </html>
