modified:   CSS/09_tailwind/src/output.css 	modified:   CSS/09_tailwind/src/responsive.html 	renamed:    CSS/09_tailwind/src/index.html -> index.html

--- a/CSS/09_tailwind/src/responsive.html
+++ b/CSS/09_tailwind/src/responsive.html
@@ -6,7 +6,7 @@
     <title>Responsive</title>
     <link rel="stylesheet" href = "./output.css">
 </head>
-<body>
-    
+<body class="bg-gray-900 text-white flex justify-center items-center min-h-screen">
+    <h1 class="text-4xl sm:text-3xl text-sm">Learn about responsive design</h1>
 </body>
 </html>
