--- a/CSS/09_tailwind/src/responsive.html
+++ b/CSS/09_tailwind/src/responsive.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href = "./output.css">
 </head>
 <body class="bg-gray-900 text-white flex justify-center items-center min-h-screen">
-    <h1 class="text-4xl sm:text-3xl text-sm">Learn about responsive design</h1>
+    <h1 class="textu-4xl sm:text-3xl text-sm">Learn about responsive design</h1>
 </body>
 </html>
