--- a/JS/DOM/index.html
+++ b/JS/DOM/index.html
@@ -13,6 +13,6 @@
     <script defer src = "dom.js"></script>
 </head>
 <body>
-    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h1>
 </body>
 </html>
