--- a/JS/DOM/dom.html
+++ b/JS/DOM/dom.html
@@ -32,7 +32,7 @@
     <section id="example-2">
       <h2>Traversing the DOM</h2>
       <ul id="citiesList">
-        <li class=''>New York</li>
+        <li class='chai'>New York</li>
         <li>Tokyo</li>
         <li>Paris</li>
         <li>London</li>
@@ -40,6 +40,21 @@
       <button id="highlightFirstCity">Highlight First City</button>
     </section>
     
+    <section id="example-3">
+      <h2>Manipulating DOM Elements</h2>
+      <div id="coffeeOrder">Order: <span id="coffeeType">Latte</span></div>
+      <button id="changeOrder">Change Order to Espresso</button>
+    </section>
+
+    <section id="example-4">
+      <h2>Creating and Inserting Elements</h2>
+      <button id="addNewItem">Add a New Item to the Shopping List</button>
+      <ul id="shoppingList">
+        <li>Bread</li>
+        <li>Milk</li>
+      </ul>
+    </section>
+
     <script src="./script.js"></script>
     
 
