--- a/JS/DOM/dom.html
+++ b/JS/DOM/dom.html
@@ -55,6 +55,16 @@
       </ul>
     </section>
 
+    <section id="example-5">
+      <h2>Removing DOM Elements</h2>
+      <ul id="taskList">
+        <li>Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li>
+      </ul>
+      <button id="removeLastTask">Remove Last Task</button>
+    </section>
+
     <script src="./script.js"></script>
     
 
