modified:   index.html 	modified:   prac.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>
       student details 
       <p>student name:</p>
-      <input id = name type = "text" required = "required">
+      <input id = name type = "text">
       <button id = "btn" type = "submit">submit</button>
       <p id = "error"></p>
     </h2>
