modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <input id = name type = "text">
       <button id = "btn" type = "submit">submit</button>
       <p id = "error"></p>
+      <form>
+        <input >
+      </form>
     </h2>
   </form>
   <script src="./prac.js"></script>
